<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <groupId>com.cisco</groupId>
    <artifactId>dhruva-sip-base</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>webex-cca-release</id>
            <url>http://engci-maven.cisco.com/artifactory/webex-cca-group</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>webex-cca-release</id>
            <url>http://engci-maven.cisco.com/artifactory/webex-cca-group</url>
        </pluginRepository>
    </pluginRepositories>

    <parent>
        <groupId>com.ciscospark</groupId>
        <artifactId>cisco-spark-parent</artifactId>
        <version>3.5.6-rc.368</version>
<!--        <relativePath>../cisco-spark-base/cisco-spark-parent</relativePath>-->
        <relativePath/>
    </parent>
    <modules>
        <module>dsb-common</module>
        <module>dsb-calling-app</module>
        <module>dsb-proxy</module>
        <module>sample-app</module>
        <module>dsb-connectivity-monitor</module>
        <module>dsb-test-framework</module>
        <module>dsb-trunk</module>
    </modules>

    <properties>
        <spotbugs.skip>false</spotbugs.skip>
        <spotbugs.failOnError>true</spotbugs.failOnError>
        <!-- SpotBugs should ignore JAIN SIP .class files from AspectJ weaving -->
        <spotbugs.onlyAnalyze>com.cisco.-</spotbugs.onlyAnalyze>
        <jacoco.version>0.8.6</jacoco.version>
        <cargo.maven2.plugin.version>1.8.0</cargo.maven2.plugin.version>
        <tomcat-ft.version>9.0.65</tomcat-ft.version>
        <dnsjava.version>3.5.0</dnsjava.version>
        <skipUTs>false</skipUTs>
        <skipITs>false</skipITs>
        <skipFTs>false</skipFTs>
    </properties>

    <distributionManagement>
        <repository>
            <id>bms-artifactory</id>
            <name>bms-artifactory-releases</name>
            <url>https://engci-maven.cisco.com/artifactory/dhruva-sip-base-release/</url>
        </repository>
        <snapshotRepository>
            <id>bms-artifactory</id>
            <name>bms-artifactory-snapshots</name>
            <url>https://engci-maven.cisco.com/artifactory/dhruva-sip-base-snapshot/</url>
        </snapshotRepository>
    </distributionManagement>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-core</artifactId>
                <version>3.4.22</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.20</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-reactor</artifactId>
                <version>1.7.1</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-circuitbreaker</artifactId>
                <version>1.7.1</version>
                <scope>compile</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>com.ciscospark</groupId>
            <artifactId>cisco-spark-starter-server</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.ciscospark</groupId>
                    <artifactId>cisco-spark-data-cassandra-migration</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.ciscospark</groupId>
                    <artifactId>cisco-spark-starter-cassandra</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>javax.sip</groupId>
            <artifactId>jain-sip-ri</artifactId>
            <version>1.3.0-91</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
        </dependency>
        <!-- DNS Java dependencies -->
        <dependency>
            <groupId>dnsjava</groupId>
            <artifactId>dnsjava</artifactId>
        </dependency>
        <dependency>
            <groupId>com.ciscospark</groupId>
            <artifactId>cisco-spark-logging</artifactId>
        </dependency>
      <dependency>
        <groupId>com.googlecode.json-simple</groupId>
        <artifactId>json-simple</artifactId>
        <version>1.1.1</version>
        <scope>compile</scope>
      </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
        </dependency>
        <dependency>
            <groupId>io.projectreactor.tools</groupId>
            <artifactId>blockhound</artifactId>
            <version>1.0.6.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>${skipUTs}</skipTests>
                    <!--<argLine>-XX:+AllowRedefinitionToAddDeleteMethods</argLine>-->
                </configuration>
            </plugin>

            <!-- Validate that AuthNG Spring and JAX-RS annotations are used correctly -->
            <plugin>
                <groupId>com.cisco.wx2</groupId>
                <artifactId>core-auth-maven-plugin</artifactId>
                <configuration>
                    <failOnWarnings>
                        <!-- Types: insecure, deprecation, validation, not_annotated, hint and pending -->
                        <failOnWarning>insecure</failOnWarning>
                        <failOnWarning>validation</failOnWarning>
                        <failOnWarning>not_annotated</failOnWarning>
                    </failOnWarnings>
                </configuration>
            </plugin>
            <!-- Format and check the code for style voilations  -->
            <plugin>
                <groupId>com.coveo</groupId>
                <artifactId>fmt-maven-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <displayLimit>10</displayLimit>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <release>11</release>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <release>11</release>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <release>11</release>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>
            <!-- jacoco -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <includes>
                        <include>com/cisco/dsb/**/*</include>
                        <include>com/cisco/dhruva/**/*</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
